change data path

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,7 +46,7 @@
       <h1 class="hero-text animated fadeIn">100% Open Source, Integrator for commerce applications</h1>
       <div class="cta animated fadeIn">
         <% if current_user.present? %>
-         <a id='data_button' class='button' href='http://localhost:3000/data'>Go to data</a>
+         <a id='data_button' class='button' href='http://www.cenithub.com/hub/data'>Go to data</a>
          <%= link_to "Sign out", destroy_user_session_path, class: 'demo' %>
         <% else %>
           <a id='sing_up_button' href='#sing_up', class='button'>Sing up free</a>
