change home image for cenit-hub

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,7 +32,7 @@
         <% end %>
       </div>
       <div class="screenshot animated fadeInUp">
-        <%= image_tag 'cenit_hub.png',:class => 'img-responsive', :alt => 'screenshot' %>
+        <%= image_tag 'ss2.png',:class => 'img-responsive', :alt => 'screenshot' %>
       </div>
     </div>
   </div>
