--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@
 <div id="hero">
   <div id="cover-image" class="animated fadeIn">
     <div class="container">
-      <h1 class="hero-text animated fadeIn">Data Integrator for commerce applications</h1>
+      <h1 class="hero-text animated fadeIn">Open source data integrator for commerce applications.</h1>
       <div class="cta animated fadeIn">
         <% if current_user.present? %>
          <a id='data_button' class='button' href='http://localhost:3000/data'>Go to data</a>
