--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
     <div class="col-sm-6 menu">
       <ul>
         <li class="active">
-          <%= link_to 'Features', features_path, class: "active" %>
+          <%= link_to 'Features', "#{root_path}#features", class: "active" %>
         </li>
         <li>
           <%= link_to 'Services', services_path %>
