change format and image in home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
     <%= stylesheet_link_tag 'compiled/theme' %>
     <%= stylesheet_link_tag 'vendor/font-awesome' %>
     <%= stylesheet_link_tag 'vendor/animate' %>
+    <%= stylesheet_link_tag 'vendor/style' %>
 
     <!-- javascript -->
     <%= javascript_include_tag 'jquery' %>
