--- a/app/views/shared/_prices.html.erb
+++ b/app/views/shared/_prices.html.erb
@@ -1,119 +1,106 @@
-				<div id="pricing">
-					<div class="container">
-						<div class="row header">
-							<div class="col-md-12">
-								<h3>Free trial. No contract. Cancel when you want.</h3>
-								<p>All plans include a 7-day free trial</p>
-							</div>
+<div id="pricing">
+	<div class="container">
+		<div class="row header">
+			<div class="col-md-12">
+				<h3>Begin and continue free if you want.</h3>
+				<p>Only pay extra space and a fee for successful comercial transactions</p>
+			</div>
+		</div>
+		<div class="row charts">
+			<div class="col-md-4">
+				<div class="chart first">
+					<div class="quantity">
+						<span class="dollar">$</span>
+						<span class="price">0</span>
+						<span class="period">/month</span>
+					</div>
+					<div class="plan-name">Free</div>
+					<div class="specs">
+						<div class="spec">
+							<span class="variable">Unlimited</span>
+							team members
 						</div>
-						<div class="row charts">
-							<div class="col-md-4">
-								<div class="chart first">
-									<div class="quantity">
-										<span class="dollar">$</span>
-										<span class="price">29</span>
-										<span class="period">/month</span>
-									</div>
-									<div class="plan-name">Freelance</div>
-									<div class="specs">
-										<div class="spec">
-											<span class="variable">5</span>
-											team members
-										</div>
-										<div class="spec">
-											<span class="variable">Digital</span>
-											recurring billing
-										</div>
-										<div class="spec">
-											<span class="variable">Virtual</span>
-											online terminal
-										</div>
-										<div class="spec">
-											<span class="variable">10</span>
-											total products
-										</div>
-										<div class="spec">
-											<span class="variable">1.0%</span>
-											Transaction fee
-										</div>
-									</div>
-									<a class="btn-signup button-clear" href="signup.html">
-										<span>Start free trial</span>
-									</a>
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="chart featured">
-									<div class="popular">Most popular</div>
-									<div class="quantity">
-										<span class="dollar">$</span>
-										<span class="price">79</span>
-										<span class="period">/month</span>
-									</div>
-									<div class="plan-name">Profesional</div>
-									<div class="specs">
-										<div class="spec">
-											<span class="variable">15</span>
-											team members
-										</div>
-										<div class="spec">
-											<span class="variable">Digital</span>
-											recurring billing
-										</div>
-										<div class="spec">
-											<span class="variable">Virtual</span>
-											online terminal
-										</div>
-										<div class="spec">
-											<span class="variable">15</span>
-											total products
-										</div>
-										<div class="spec">
-											<span class="variable">0.5%</span>
-											Transaction fee
-										</div>
-									</div>
-									<a class="btn-signup button-clear" href="signup.html">
-										<span>Start free trial</span>
-									</a>
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="chart last">
-									<div class="quantity">
-										<span class="dollar">$</span>
-										<span class="price">119</span>
-										<span class="period">/month</span>
-									</div>
-									<div class="plan-name">Premium</div>
-									<div class="specs">
-										<div class="spec">
-											<span class="variable">Unlimited</span>
-											team members
-										</div>
-										<div class="spec">
-											<span class="variable">Digital</span>
-											recurring billing
-										</div>
-										<div class="spec">
-											<span class="variable">Virtual</span>
-											online terminal
-										</div>
-										<div class="spec">
-											<span class="variable">25</span>
-											total products
-										</div>
-										<div class="spec">
-											<span class="variable">No</span>
-											Transaction fee
-										</div>
-									</div>
-									<a class="btn-signup button-clear" href="signup.html">
-										<span>Start free trial</span>
-									</a>
-								</div>
-							</div>
+						<div class="spec">
+							<span class="variable">1 GB</span>
+							disc space
+						</div>
+						<div class="spec">
+							<span class="variable">ERP</span>
+							workspace tenant
+						</div>
+						<div class="spec">
+							<span class="variable">Unlimited</span>
+							data interchange
 						</div>
 					</div>
+					<a class="btn-signup button-clear" href="#sing_up">
+						<span>Start free</span>
+					</a>
+
 				</div>
+			</div>
+      
+			<div class="col-md-4">
+				<div class="chart featured">
+					<div class="popular">Recomended</div>
+					<div class="quantity">
+						<span class="dollar">$</span>
+						<span class="price">X</span>
+						<span class="period">/month</span>
+					</div>
+					<div class="plan-name">Plus options</div>
+					<div class="specs">
+						<div class="spec">
+							<span class="variable"> $1 x GB </span>
+							over 1 GB
+						</div>
+						<div class="spec">
+							<span class="variable">$0.1</span>
+							x B2C order
+						</div>
+						<div class="spec">
+							<span class="variable">$1</span>
+							x B2B EDI document
+						</div>
+					</div>
+					<a class="btn-signup button-clear" href="#sing_up">
+						<span>Start free</span>
+					</a>
+				</div>
+			</div>
+      
+			<div class="col-md-4">
+				<div class="chart last">
+					<div class="quantity">
+						<span class="dollar">$</span>
+						<span class="price">Y</span>
+						<span class="period">/month</span>
+					</div>
+					<div class="plan-name">Your own SaaS</div>
+					<div class="specs">
+						<div class="spec">
+							<span class="variable">Unlimited</span>
+							tenants
+						</div>
+						<div class="spec">
+							<span class="variable">Include</span>
+							SaaS mannagment
+						</div>
+						<div class="spec">
+							<span class="variable">$0.05</span>
+							x B2C order
+						</div>
+						<div class="spec">
+							<span class="variable">$0.5</span>
+							x B2B EDI document
+						</div>
+					</div>
+					<a class="btn-signup button-clear" href="signup.html">
+						<span>Contact Us</span>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
