--- a/app/views/shared/_features.html.erb
+++ b/app/views/shared/_features.html.erb
@@ -1,10 +1,8 @@
 <div id='features' class="container text-center">
-  <div class="row header">
-    <h2>Main features</h2>
-  </div>
-
   <div id="second-option">
-
+    <div class="row header">
+      <h2>CenitHub an Open Source Data Integrator</h2>
+    </div>
     <div class="container">
       <div class="row">
         <div class="col-md-4 feature">
