--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,20 +1,12 @@
 <nav class="nav-menu">
   <h3>Menu</h3>
-  <%= link_to 'Features', "#{root_path}#features", :class => 'item' %>
-  <%= link_to 'Services', "#{root_path}#services", :class => 'item' %>
-  <%= link_to 'Documentation', '#', :class => 'item' %>
-  <%= link_to 'Contact us', contact_us_path, :class => 'item' %>
-
+  <%= link_to 'Data Integration', "#{root_path}#features", :class => 'item' %>
+  <%= link_to 'Plans', "#{root_path}#pricing", :class => 'item' %>
+  <%= link_to 'Workspace', "#{root_path}#services", :class => 'item' %>
 
   <div class="social">
     <a href="https://github.com/openjaf/cenit">
-      <i class="fa fa-github"></i>
-    </a>
-    <a href="#">
-      <i class="fa fa-twitter"></i>
-    </a>
-    <a href="#">
-      <i class="fa fa-linkedin"></i>
+      <%=image_tag 'social/github-sociocon.png',:alt=>'github' %>
     </a>
   </div>
 </nav>
