--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,8 +31,8 @@
          <%= link_to "Workspace", open_workspace(current_user), class: 'button' %>
          <%= link_to "Sign out", destroy_user_session_path, class: 'demo' %>
         <% else %>
-          <a id='sing_up_button' href='#sing_up', class='button'>Sing up free</a>
-          <a id='sing_in_button' href='#sing_in' class="demo">Sign in here</a>
+          <a id='sing_up_button' href='#sing_up', class='button'>Sing up</a>
+          <a id='sing_in_button' href='#sing_in' class="demo">Sign in</a>
         <% end %>
       </div>
       <div class="screenshot animated fadeInUp">
