--- a/app/views/shared/_services.html.erb
+++ b/app/views/shared/_services.html.erb
@@ -3,7 +3,7 @@
  <div id='services' class="container text-center">
    
    <div class="row header">
-     <h2>ERP workspace with Odoo</h2>
+     <h2>ERP & CRM workspace with Odoo</h2>
    </div>
  
     <div class="row">
