The user status page is done and a proposition of layout for that page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
     <%= csrf_meta_tags %>
     <%= yield(:head) %>
   </head>
-  <body id='home3' class="<%= controller_name %> <%= action_name %>">
+  <body id="<%= @body_id %>" class="<%= controller_name %> <%= action_name %>">
     <%= yield %>
   </body>
 </html>
