--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,7 +42,14 @@
   </div>
 </div>
 
-<%= render 'shared/features' %>
+<div id='features' class="container text-center">
+  <div id="second-option">
+    <div class="row header">
+      <h2>CenitHub an Open Source Data and Business Integration Hub</h2>
+    </div>
+    <%= render 'shared/features' %>
+  </div>
+</div>
 <%= render 'shared/prices' %>
 <%= render 'shared/services' %>
 
