--- a/app/assets/stylesheets/compiled/theme.scss
+++ b/app/assets/stylesheets/compiled/theme.scss
@@ -2264,6 +2264,9 @@ a:focus, button:focus {
     right: 0; }
     #home3 #hero .screenshot img {
       margin: 0 auto; }
+#home3 #hero.hub {
+  height: 250px;
+}        
 #home3 #tabs {
   -webkit-font-smoothing: antialiased; }
   @media (max-width: 991px) {
