--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,6 +1,7 @@
 <nav class="nav-menu">
   <h3>Menu</h3>
-  <%= link_to 'Data Integration', "#{root_path}#features", :class => 'item' %>
+  <%= link_to 'Home', root_path, :class => 'item' %>
+  <%= link_to 'Data Integration', hub_path, :class => 'item' %>
   <%= link_to 'Plans', "#{root_path}#pricing", :class => 'item' %>
   <%= link_to 'Workspace', "#{root_path}#services", :class => 'item' %>
   <%if current_user%>
