--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -108,6 +108,28 @@
 
 <% end %>
 
+<div id='modal-contact-us'></div>
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  contact_us
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">You can contact us with anything related to Cenit</h4>
+      </div>
+      <div class="modal-body">
+        <%= render 'contact_us/contacts/new' %>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div id="footer">
   <% render 'layouts/footer' %>
 </div>
@@ -157,5 +179,18 @@
 
             $('#cover-image').css("background-position", "50% " + slowBg + "%");
         });
+        
+        
+        $('#exampleModal').on('show.bs.modal', function (event) {
+          var button = $(event.relatedTarget); // Button that triggered the modal
+          var recipient = button.data('whatever'); // Extract info from data-* attributes
+          // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+          // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
+          var modal = $(this);
+          modal.find('.modal-title').text('New message to ' + recipient);
+          modal.find('.modal-body input').val(recipient);
+        });
+        
+        
     });
 </script>
