--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
     <%= javascript_include_tag 'jquery' %>
     <%= javascript_include_tag 'bootstrap/bootstrap.min'  %>
     <%= javascript_include_tag 'theme'  %>
+    <%= javascript_include_tag 'jquery.validate.min'  %>
     <%#= javascript_include_tag :defaults %>
     
     <%= csrf_meta_tags %>
@@ -32,54 +33,7 @@
   </head>
   <body id="<%= @body_id %>" class="<%= controller_name %> <%= action_name %>">
     <%= yield %>
-
-    <div id="contact_us" class="modal fade">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <%= form_for ContactUs::Contact.new, :url => contacts_path, :html => {:class => 'formtastic contact-form', :role=>"form", :id=>"contact-form"}  do |f| %>
-              <div class="modal-body">
-                <% if ContactUs.require_name %>
-                    <div class='string required form-group' id='contact_us_contact_name_input'>
-                      <%= f.label :name, (t('.name') + content_tag(:abbr, '*', :class => 'required')).html_safe %>
-                      <%= f.text_field :name, :class => 'form-control'%>
-                      <% if f.object.errors[:name].present? %>
-                          <p class='inline-error'><%= f.object.errors[:name].join(' and ') %></p>
-                      <% end %>
-                    </div>
-                <% end %>
-                <div class='string required form-group' id='contact_us_contact_email_input'>
-                  <%= f.label :email, (t('.email') + content_tag(:abbr, '*', :class => 'required')).html_safe %>
-                  <%= f.text_field :email, :class => 'form-control'%>
-                  <% if f.object.errors[:email].present? %>
-                      <p class='inline-error'><%= f.object.errors[:email].join(' and ') %></p>
-                  <% end %>
-                </div>
-                <% if ContactUs.require_subject %>
-                    <div class='string required form-group' id='contact_us_contact_subject_input'>
-                      <%= f.label :subject, (t('.subject') + content_tag(:abbr, '*', :class => 'required')).html_safe %>
-                      <%= f.text_field :subject, :class => 'form-control' %>
-                      <% if f.object.errors[:subject].present? %>
-                          <p class='inline-error'><%= f.object.errors[:subject].join(' and ') %></p>
-                      <% end %>
-                    </div>
-                <% end %>
-                <div class='text required form-group' id='contact_us_contact_message_input'>
-                  <%= f.label :message, (t('.message') + content_tag(:abbr, '*', :class => 'required')).html_safe %>
-                  <%= f.text_area :message, :class => 'form-control' %>
-                  <% if f.object.errors[:message].present? %>
-                      <p class='inline-error'><%= f.object.errors[:message].join(' and ') %></p>
-                  <% end %>
-                </div>
-                <div class='commit'>
-                  <%= f.submit :submit, :class => 'submit create button button-small', :value => t('email_us') %>
-                  <a class="btn" data-dismiss="modal" href="#">Close</a>
-                </div>
-              </div>
-          <% end %>
-
-        </div><!-- /.modal-content -->
-      </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-
+    <%= render 'shared/contact_us' %>
+    
   </body>
 </html>
