refactoring aplication layout

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@
 <div id="hero">
   <div id="cover-image" class="animated fadeIn">
     <div class="container">
-      <h1 class="hero-text animated fadeIn">Data integrator and open source commerce applications.</h1>
+      <h1 class="hero-text animated fadeIn">Data Integrator and Online Business Management.</h1>
       <div class="cta animated fadeIn">
         <% if current_user.present? %>
          <% if app = Doorkeeper::Application.find_by(name: 'Cenit') %>
