--- a/app/views/shared/_prices.html.erb
+++ b/app/views/shared/_prices.html.erb
@@ -95,7 +95,7 @@
 							x B2B EDI document
 						</div>
 					</div>
-					<a class="btn-signup button-clear" href="signup.html">
+					<a data-toggle="modal" class="btn-signup button-clear" href="#contact_us">
 						<span>Contact Us</span>
 					</a>
 				</div>
