--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,10 @@
     <%= javascript_include_tag 'jquery' %>
     <%= javascript_include_tag 'bootstrap/bootstrap.min'  %>
     <%= javascript_include_tag 'theme'  %>
-    <%= javascript_include_tag :defaults %>
+    <% javascript_include_tag :defaults %>
+    <%= javascript_include_tag :registrations %>
+    <%= javascript_include_tag 'jquery.externalscript' %>
+    <%= javascript_include_tag 'jquery.readyselector' %>
     
     <%= csrf_meta_tags %>
     <%= yield(:head) %>
