--- a/app/views/status/show.html.erb
+++ b/app/views/status/show.html.erb
@@ -1,207 +1,106 @@
-<% content_for :head do %>
-    <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
-<% end %>
+This is the status for User <%= @user.email %>
+And is Role <%= @user.roles.first.name %>
 
-    This is the status for User <%= @user.email %>
-    And is Role <%= @user.roles.first.name %>
+<div id="update">
+  <div class="container">
+    <div class="row header">
+      <h3>Cenit SaaS System Status</h3>
+      <p>Current status and incident report</p>
+    </div>
+    <%= render 'layouts/messages' %>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="current-status">
+          <span class="updated">
+            You are at 30% of the Free Plan of 1 Gb
+          </span>
+          <div class="status">
+            <div class="color green"></div>
+            Billing Information
+          </div>
+          <div class="help">
+            <% if @user.customer_id %>
+  This account is billed to: <%= @user.last_4_digits %>
+              <a data-toggle="modal" href="#card-data" class="btn btn-mini" type="button">Update card</a>
+            <% else %>
+              <a data-toggle="modal" href="#card-data" class="btn btn-mini" type="button">Add card</a>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="panel panel-default modules">
+          <!-- List group -->
+          <ul class="list-group">
+            <li class="list-group-item">
+              Data Integration
+              <div class="status">Operational</div>
+            </li>
+            <li class="list-group-item">
+              WorkSpace
+              <div class="status down">Down</div>
+            </li>
+            <li class="list-group-item">
+                          StoreFront
+              <div class="status">Operational</div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="messages">
+          <h3>Messages</h3>
+          <div class="date">
+            <div class="day">Today</div>
+            <p class="ok">
+              All systems operational
+            </p>
+          </div>
+          <div class="date">
+            <div class="day">Yesterday, October 25 2013</div>
+            <p class="ok">
+              All systems operational
+            </p>
+          </div>
+          <div class="date">
+            <div class="day">October 04 2013</div>
+            <p class="ok">
+              All systems operational
+            </p>
+          </div>
+          <div class="date">
+            <div class="day">October 03 2013</div>
+            <p class="ok">
+              All systems operational
+            </p>
+          </div>
+          <div class="date">
+            <div class="day">October 02 2013</div>
+            <p class="issues">
+              Application deployment issues
+            </p>
+            <p class="update">
+              <strong>Resolved:</strong>
+              We fixed the issues monitoring status, downtime was between 1pm and 5pm PT.
+            </p>
+            <p class="update">
+              <strong>Investigating:</strong>
+              We identified some issues deploying some applications and monitoring their status.
+            </p>
+          </div>
+        </div>
+        <div class="full-history">
+          <a href="#">
+            ← See full incident history
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-	<div id="update">
-		<div class="container">
-			<div class="row header">
-				<h3>React System Status</h3>
-				<p>Current status and incident report</p>
-			</div>
-			<div class="row">
-				<div class="col-md-12">
-					<div class="current-status">
-						<span class="updated">
-							You are at 30% of the Free Plan of 1 Gb
-						</span>
-						<div class="status">
-							<div class="color green"></div>
-							Billing Information
-						</div>
-						<div class="help">
-                          <% if @user.customer_id %>
-						    This account is billed to: Visa-5022
-                            <a class="button" href="contactus.html">Update Credit Card Info</a>
-                          <% else %>
-                            <a data-toggle="modal" href="#card-data" class="btn btn-mini" type="button">Change card</a>
-                          <% end %>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-12">
-					<div class="panel panel-default modules">
-					  <!-- List group -->
-					  <ul class="list-group">
-					    <li class="list-group-item">
-					    	Data Integration
-					    	<div class="status">Operational</div>
-					    </li>
-					    <li class="list-group-item">
-					    	WorkSpace
-					    	<div class="status down">Down</div>
-					    </li>
-					    <li class="list-group-item">
-                            StoreFront
-					    	<div class="status">Operational</div>
-					    </li>
-
-					  </ul>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-12">
-					<div class="messages">
-						<h3>Messages</h3>
-						<div class="date">
-							<div class="day">Today</div>
-							<p class="ok">
-								All systems operational
-							</p>
-						</div>
-						<div class="date">
-							<div class="day">Yesterday, October 25 2013</div>
-							<p class="ok">
-								All systems operational
-							</p>
-						</div>
-						<div class="date">
-							<div class="day">October 04 2013</div>
-							<p class="ok">
-								All systems operational
-							</p>
-						</div>
-						<div class="date">
-							<div class="day">October 03 2013</div>
-							<p class="ok">
-								All systems operational
-							</p>
-						</div>
-						<div class="date">
-							<div class="day">October 02 2013</div>
-							<p class="issues">
-								Application deployment issues
-							</p>
-							<p class="update">
-								<strong>Resolved:</strong>
-								We fixed the issues monitoring status, downtime was between 1pm and 5pm PT.
-							</p>
-							<p class="update">
-								<strong>Investigating:</strong>
-								We identified some issues deploying some applications and monitoring their status.
-							</p>
-						</div>
-					</div>
-					<div class="full-history">
-						<a href="#">
-							← See full incident history
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-
-    <div id="card-data" class="modal fade" style="display: none;">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-body">
-            <%= form_for @user, :url => update_card_path, :html => {:method => :put, :class => 'form-horizontal card_form' } do |f| %>
-                <div class="modal-header">
-                  <a class="close" data-dismiss="modal">&#215;</a>
-                  <h3>Change Credit Card</h3>
-                </div>
-                <div class="modal-body">
-                  <div class="field">
-                    <%= label_tag :card_number, "Credit Card Number" %>
-                    <%= text_field_tag :card_number, nil, name: nil %>
-                  </div>
-                  <div class="field">
-                    <%= label_tag :card_code, "Card Security Code (CVV)" %>
-                    <%= text_field_tag :card_code, nil, name: nil %>
-                  </div>
-                  <div class="field">
-                    <%= label_tag :card_month, "Card Expiration" %>
-                    <%= select_month nil, {add_month_numbers: true}, {name: nil, id: "card_month"}%>
-                    <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year+10}, {name: nil, id: "card_year"}%>
-                  </div>
-                  <%= f.hidden_field :email %>
-                  <%= f.hidden_field :stripe_token %>
-                </div>
-                <div class="modal-footer">
-                  <%= f.submit "Change Credit Card", :class => "btn btn-primary" %>
-                  <a class="btn" data-dismiss="modal" href="#">Close</a>
-                </div>
-            <% end %>          </div>
-        </div><!-- /.modal-content -->
-      </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-
-
-	<div id="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-3 copyright">
-					React LLC 2014
-				</div>
-				<div class="col-sm-6 menu">
-					<ul>
-	      				<li class="active">
-	          				<a href="features.html">Features</a>
-	        			</li>
-	        			<li>
-	        				<a href="services.html">Services</a>
-	        			</li>
-	        			<li>
-	          				<a href="pricing.html">Pricing</a>
-	        			</li>
-	        			<li>
-	          				<a href="support.html">Support</a>
-	        			</li>
-	        			<li>
-	          				<a href="blog.html">Blog</a>
-	        			</li>
-	      			</ul>
-				</div>
-				<div class="col-sm-3 social">
-					<a href="#">
-						<img src="images/social/social-tw.png" alt="twitter" />
-					</a>
-					<a href="#">
-						<img src="images/social/social-dbl.png" alt="dribbble" />
-					</a>					
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-	<!--<script type="text/javascript">-->
-//		$(function () {
-//			// Update the status color every 2 seconds, for demo only
-//			// You can remove this!
-//			var $status = $(".status .color"),
-//				colors = ["green", "yellow", "red"],
-//				currentStatus = 0;
-//
-//			function updateStatus() {
-//				currentStatus++;
-//				if (currentStatus >= 3) {
-//					currentStatus = 0;
-//				}
-//				color = colors[currentStatus];
-//				$status.removeClass().addClass("color").addClass(color);
-//			}
-//
-//			setInterval(function () {
-//				updateStatus();
-//			}, 2000);
-//		});
-	<!--</script>-->
+<%= render 'shared/update_card' %>
