--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,121 +1,125 @@
-<div class="st-container">
+<div id="home3" class="<%= controller_name %> <%= action_name %>">
+  <div class="st-container">
   
-  <%= render 'shared/menu' %>
+    <%= render 'shared/menu' %>
   
-<div class="st-pusher">
-<div class="st-content">
+    <div class="st-pusher">
+      <div class="st-content">
 
-<header class="navbar navbar-inverse hero" role="banner">
-  <div class="container">
-    <div class="navbar-header">
-      <%= link_to 'Cenit SaaS', root_path , :class => 'navbar-brand' %>
-    </div>
-    <div class="sidebar-toggle">
-      <div class="line"></div>
-      <div class="line"></div>
-      <div class="line"></div>
-    </div>
-  </div>
-</header>
+      <header class="navbar navbar-inverse hero" role="banner">
+        <div class="container">
+          <div class="navbar-header">
+            <%= link_to 'Cenit SaaS', root_path , :class => 'navbar-brand' %>
+          </div>
+          <div class="sidebar-toggle">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
+        </div>
+      </header>
 
-<div id="hero">
-  <div id="cover-image" class="animated fadeIn">
-    <div class="container">
-      <h1 class="hero-text animated fadeIn">Data integrator and open source commerce applications.</h1>
-      <div class="cta animated fadeIn">
-        <% if current_user.present? %>
-         <% if app = Doorkeeper::Application.find_by(name: 'Cenit') %>
-           <% options = { client_id: app.uid, redirect_uri: app.redirect_uri.split.first, response_type: 'code'} %>
-           <%= link_to "Data Integrator",generate_url("/oauth/authorize", options), class: 'button' %>
-         <% end %>
-         <%= link_to "ERP & CRM", open_workspace(current_user), class: 'button' %>
-         <%= link_to "Sign out", destroy_user_session_path, class: 'demo' %>
-        <% else %>
-          <a id='sing_up_button' href='#sing_up', class='button'>Sing up</a>
-          <a id='sing_in_button' href='#sing_in' class="demo">Sign in</a>
-        <% end %>
+      <div id="hero">
+        <div id="cover-image" class="animated fadeIn">
+          <div class="container">
+            <h1 class="hero-text animated fadeIn">Data integrator and open source commerce applications.</h1>
+            <div class="cta animated fadeIn">
+              <% if current_user.present? %>
+               <% if app = Doorkeeper::Application.find_by(name: 'Cenit') %>
+                 <% options = { client_id: app.uid, redirect_uri: app.redirect_uri.split.first, response_type: 'code'} %>
+                 <%= link_to "Data Integrator",generate_url("/oauth/authorize", options), class: 'button' %>
+               <% end %>
+               <%= link_to "ERP & CRM", open_workspace(current_user), class: 'button' %>
+               <%= link_to "Sign out", destroy_user_session_path, class: 'demo' %>
+              <% else %>
+                <a id='sing_up_button' href='#sing_up', class='button'>Sing up</a>
+                <a id='sing_in_button' href='#sing_in' class="demo">Sign in</a>
+              <% end %>
+            </div>
+            <div class="screenshot animated fadeInUp">
+              <%= image_tag 'ss2.png',:class => 'img-responsive', :alt => 'screenshot' %>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="screenshot animated fadeInUp">
-        <%= image_tag 'ss2.png',:class => 'img-responsive', :alt => 'screenshot' %>
-      </div>
-    </div>
-  </div>
-</div>
 
-<%= render 'shared/features' %>
-<%= render 'shared/prices' %>
-<%= render 'shared/services' %>
+      <%= render 'shared/features' %>
+      <%= render 'shared/prices' %>
+      <%= render 'shared/services' %>
 
 
-<br><br><br>
-<% unless current_user.present? %>
-  <% resource ||= User.new %>
-  <div id="sing_up_form">
-    <div class="container text-center">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="form-wrapper" >
-            <h4>Ready to start? Create your free account now</h4>
-            <% flash.each do |key, message| %>
-              <div class="notice"><%= message %></div>
-            <% end %>
+      <br><br><br>
+      <% unless current_user.present? %>
+        <% resource ||= User.new %>
+        <div id="sing_up_form">
+          <div class="container text-center">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="form-wrapper" >
+                  <h4>Ready to start? Create your free account now</h4>
+                  <% flash.each do |key, message| %>
+                    <div class="notice"><%= message %></div>
+                  <% end %>
             
-            <%= form_for resource, as: :user, url: registration_path(:user), remote: true, html: { role: 'form', class: 'form-inline'} do |f| %>
-              <div class="form-group">
-                <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
-              </div>
-              <div class="form-group">
-                <%= f.password_field :password, class: 'form-control', placeholder: 'Password' %>
-              </div>
-              <div class="form-group">
-                <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Password Confirmation' %>
-              </div>
+                  <%= form_for resource, as: :user, url: registration_path(:user), remote: true, html: { role: 'form', class: 'form-inline'} do |f| %>
+                    <div class="form-group">
+                      <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.password_field :password, class: 'form-control', placeholder: 'Password' %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Password Confirmation' %>
+                    </div>
 
-              <%= f.submit 'Sign Up',:class => 'button button-small' %>
-              <a name='sing_up'></a>
-            <% end %>
+                    <%= f.submit 'Sign Up',:class => 'button button-small' %>
+                    <a name='sing_up'></a>
+                  <% end %>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
 
-  <div id="sing_in_form" style='display:none'>
-    <div class="container text-center">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="form-wrapper" >
-            <h4>Enter in your account now</h4>
-            <% flash.each do |key, message| %>
-              <div class="notice"><%= message %></div>
-            <% end %>
-            <%= form_for resource, as: :user, url: session_path(:user), remote: true, html:  { role: 'form', class: 'form-inline'} do |f| %>
-              <div class="form-group">
-                <%= f.email_field :email, class: 'form-control', :placeholder => 'Email' %>
-              </div>
-              <div class="form-group">
-                <%= f.password_field :password, class: 'form-control', :placeholder => 'Password' %>
-              </div>
+        <div id="sing_in_form" style='display:none'>
+          <div class="container text-center">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="form-wrapper" >
+                  <h4>Enter in your account now</h4>
+                  <% flash.each do |key, message| %>
+                    <div class="notice"><%= message %></div>
+                  <% end %>
+                  <%= form_for resource, as: :user, url: session_path(:user), remote: true, html:  { role: 'form', class: 'form-inline'} do |f| %>
+                    <div class="form-group">
+                      <%= f.email_field :email, class: 'form-control', :placeholder => 'Email' %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.password_field :password, class: 'form-control', :placeholder => 'Password' %>
+                    </div>
 
-              <%= f.submit 'Sign In',:class => 'button button-small' %>
-              <a name='sing_in'></a>
-            <% end %>
+                    <%= f.submit 'Sign In',:class => 'button button-small' %>
+                    <a name='sing_in'></a>
+                  <% end %>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+
+      <% end %>
+
+      <%= render 'status/show', user: current_user %>
+
+      <div id="footer">
+        <% render 'layouts/footer' %>
       </div>
-    </div>
-  </div>
 
-<% end %>
+      </div><!-- end .st-content -->
+    </div><!-- end .st-pusher -->
+  </div><!-- end .st-container -->
 
-<div id="footer">
-  <% render 'layouts/footer' %>
 </div>
-
-</div><!-- end .st-content -->
-</div><!-- end .st-pusher -->
-</div><!-- end .st-container -->
-
 
 <script>
     $(function () {
