--- a/app/views/status/show.html.erb
+++ b/app/views/status/show.html.erb
@@ -1,106 +1,62 @@
-This is the status for User <%= @user.email %>
-And is Role <%= @user.roles.first.name %>
+<div id="home3" class="<%= controller_name %> <%= action_name %>">
+<div class="st-container">
+  
+  <%= render 'shared/menu' %>
+  
+  <div class="st-pusher">
+    <div class="st-content">
 
-<div id="update">
-  <div class="container">
-    <div class="row header">
-      <h3>Cenit SaaS System Status</h3>
-      <p>Current status and incident report</p>
-    </div>
-    <%= render 'layouts/messages' %>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="current-status">
-          <span class="updated">
-            You are at 30% of the Free Plan of 1 Gb
-          </span>
-          <div class="status">
-            <div class="color green"></div>
-            Billing Information
+      <header class="navbar navbar-inverse hero" role="banner">
+        <div class="container">
+          <div class="navbar-header">
+            <%= link_to 'Cenit SaaS', root_path , :class => 'navbar-brand' %>
           </div>
-          <div class="help">
-            <% if @user.customer_id %>
-  This account is billed to: <%= @user.last_4_digits %>
-              <a data-toggle="modal" href="#card-data" class="btn btn-mini" type="button">Update card</a>
-            <% else %>
-              <a data-toggle="modal" href="#card-data" class="btn btn-mini" type="button">Add card</a>
-            <% end %>
+          <div class="sidebar-toggle">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="panel panel-default modules">
-          <!-- List group -->
-          <ul class="list-group">
-            <li class="list-group-item">
-              Data Integration
-              <div class="status">Operational</div>
-            </li>
-            <li class="list-group-item">
-              WorkSpace
-              <div class="status down">Down</div>
-            </li>
-            <li class="list-group-item">
-                          StoreFront
-              <div class="status">Operational</div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="messages">
-          <h3>Messages</h3>
-          <div class="date">
-            <div class="day">Today</div>
-            <p class="ok">
-              All systems operational
-            </p>
-          </div>
-          <div class="date">
-            <div class="day">Yesterday, October 25 2013</div>
-            <p class="ok">
-              All systems operational
-            </p>
-          </div>
-          <div class="date">
-            <div class="day">October 04 2013</div>
-            <p class="ok">
-              All systems operational
-            </p>
-          </div>
-          <div class="date">
-            <div class="day">October 03 2013</div>
-            <p class="ok">
-              All systems operational
-            </p>
-          </div>
-          <div class="date">
-            <div class="day">October 02 2013</div>
-            <p class="issues">
-              Application deployment issues
-            </p>
-            <p class="update">
-              <strong>Resolved:</strong>
-              We fixed the issues monitoring status, downtime was between 1pm and 5pm PT.
-            </p>
-            <p class="update">
-              <strong>Investigating:</strong>
-              We identified some issues deploying some applications and monitoring their status.
-            </p>
-          </div>
-        </div>
-        <div class="full-history">
-          <a href="#">
-            ← See full incident history
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+      </header>
 
-<%= render 'shared/update_card' %>
+      <div id="hero" class="hub">
+        <div class="animated fadeIn">
+          <div class="container">
+            <h1 class="hero-text animated fadeIn">Cenit SaaS System Status</h1>
+          </div>
+        </div>
+      </div>
+
+      <%= render 'show', user: @user %>
+
+      <div id="footer">
+        <% render 'layouts/footer' %>
+      </div>
+
+    </div><!-- end .st-content -->
+  </div><!-- end .st-pusher -->
+</div><!-- end .st-container -->
+
+<div id="home3" class="<%= controller_name %> <%= action_name %>">
+
+<script>
+    $(function () {
+        // triggers the off-canvas panel
+        $(".sidebar-toggle").click(function (e) {
+            e.stopPropagation();
+            $(".st-container").toggleClass("nav-effect");
+        });
+        $(".st-pusher").click(function () {
+            $(".st-container").removeClass("nav-effect");
+        });
+        // parallax header
+        $('#cover-image').css("background-position", "50% 50%");
+        $(window).scroll(function() {
+            var scroll = $(window).scrollTop(),
+                    slowScroll = scroll/4,
+                    slowBg = 50 - slowScroll;
+            $('#cover-image').css("background-position", "50% " + slowBg + "%");
+        });
+    });
+</script>
+
