--- a/app/views/status/show.html.erb
+++ b/app/views/status/show.html.erb
@@ -19,7 +19,7 @@
         </div>
       </header>
 
-      <div id="hero" class="hub">
+      <div id="hero" class="status">
         <div class="animated fadeIn">
           <div class="container">
             <h1 class="hero-text animated fadeIn">Cenit SaaS System Status</h1>
