--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-3 copyright">
-      Cenit Hub 2014
+      Cenit, LLC 2015
     </div>
     <div class="col-sm-6 menu">
       <ul>
