--- a/app/views/shared/_features.html.erb
+++ b/app/views/shared/_features.html.erb
@@ -1,7 +1,7 @@
 <div id='features' class="container text-center">
   <div id="second-option">
     <div class="row header">
-      <h2>CenitHub an Open Source Data and Business Integration Hub</h2>
+      <h2>Open Source Hub for Data and Business Integrations</h2>
     </div>
     <div class="container">
       <div class="row">
