--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,31 +15,15 @@
   </head>
   <body>
     <div id="home3">
-
       <div class="st-container">
         <%= render 'shared/menu' %>
         <div class="st-pusher">
           <div class="st-content">
-            
-            <header class="navbar navbar-inverse hero" role="banner">
-              <div class="container">
-                <div class="navbar-header">
-                  <%= link_to 'Cenit SaaS', root_path , :class => 'navbar-brand' %>
-                </div>
-                <div class="sidebar-toggle">
-                  <div class="line"></div>
-                  <div class="line"></div>
-                  <div class="line"></div>
-                </div>
-              </div>
-            </header>
-            
+            <%= render 'layouts/header'%>
             <%= yield %>
+            <%= render 'layouts/footer' %>
             <%= render 'shared/contact_us' %>
-            <div id="footer">
-              <%= render 'layouts/footer' %>
-            </div>
-
+            
           </div><!-- end .st-content -->
         </div><!-- end .st-pusher -->
       </div><!-- end .st-container -->
