--- a/app/views/shared/_services.html.erb
+++ b/app/views/shared/_services.html.erb
@@ -12,42 +12,42 @@
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/amazon.png',:class => 'img-responsive', :alt => 'amazon' %>
+            <%= image_tag 'integrations/amazon.png',:class => 'img-responsive', :alt => 'amazon', width: "102", height: "71" %>
           </div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/bronto.png',:class => 'img-responsive', :alt => 'bronto' %>
+            <%= image_tag 'integrations/bronto.png',:class => 'img-responsive', :alt => 'bronto', width: "102", height: "71" %>
           </div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/desk.png',:class => 'img-responsive', :alt => 'desk' %>
+            <%= image_tag 'integrations/desk.png',:class => 'img-responsive', :alt => 'desk', width: "102", height: "71" %>
           </div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/quickbooks.png',:class => 'img-responsive', :alt => 'quickbooks' %>
+            <%= image_tag 'integrations/quickbooks.png',:class => 'img-responsive', :alt => 'quickbooks', width: "102", height: "71" %>
           </div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/netsuite.png',:class => 'img-responsive', :alt => 'netsuite' %>
+            <%= image_tag 'integrations/netsuite.png',:class => 'img-responsive', :alt => 'netsuite', width: "102", height: "71" %>
           </div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/mailchimp.png',:class => 'img-responsive', :alt => 'mailchimp' %>
+            <%= image_tag 'integrations/mailchimp.png',:class => 'img-responsive', :alt => 'mailchimp', width: "102", height: "71" %>
           </div>
         </div>
       </div>
@@ -57,29 +57,14 @@
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/shipstation.png',:class => 'img-responsive', :alt => 'shipstation' %>
+            <%= image_tag 'integrations/shipstation.png',:class => 'img-responsive', :alt => 'shipstation', width: "102", height: "71" %>
           </div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/exact_target.png',:class => 'img-responsive', :alt => 'exact_target' %>
-          </div>
-        </div>
-      </div>
-      
-      <div class="col-md-2">
-        <div class="section">
-          <div class="pic">
-            <%= image_tag 'integrations/jirafe.png',:class => 'img-responsive', :alt => 'jirafe' %>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-2">
-        <div class="section">
-          <div class="pic">
-            <%= image_tag 'integrations/ql.png',:class => 'img-responsive', :alt => 'ql' %>
+            <%= image_tag 'integrations/exact_target.png',:class => 'img-responsive', :alt => 'exact_target', width: "102", height: "71" %>
           </div>
         </div>
       </div>
@@ -87,14 +72,29 @@
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/mandrill.png',:class => 'img-responsive', :alt => 'mandrill' %>
+            <%= image_tag 'integrations/jirafe.png',:class => 'img-responsive', :alt => 'jirafe', width: "102", height: "71" %>
           </div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/sf.png',:class => 'img-responsive', :alt => 'sf' %>
+            <%= image_tag 'integrations/ql.png',:class => 'img-responsive', :alt => 'ql', width: "102", height: "71" %>
+          </div>
+        </div>
+      </div>
+      
+      <div class="col-md-2">
+        <div class="section">
+          <div class="pic">
+            <%= image_tag 'integrations/mandrill.png',:class => 'img-responsive', :alt => 'mandrill', width: "102", height: "71" %>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="section">
+          <div class="pic">
+            <%= image_tag 'integrations/sf.png',:class => 'img-responsive', :alt => 'sf', width: "102", height: "71" %>
           </div>
         </div>
       </div>
@@ -106,35 +106,35 @@
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/shipwire.png',:class => 'img-responsive', :alt => 'shipwire' %>
+            <%= image_tag 'integrations/shipwire.png',:class => 'img-responsive', :alt => 'shipwire', width: "102", height: "71" %>
           </div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/zendesk.png',:class => 'img-responsive', :alt => 'zendesk' %>
+            <%= image_tag 'integrations/zendesk.png',:class => 'img-responsive', :alt => 'zendesk', width: "102", height: "71" %>
           </div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/ebay.jpg',:class => 'img-responsive', :alt => 'ebay' %>
+            <%= image_tag 'integrations/ebay.jpg',:class => 'img-responsive', :alt => 'ebay', width: "102", height: "71" %>
           </div>
         </div>
       </div>      
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/odoo.png',:class => 'img-responsive', :alt => 'odoo' %>
+            <%= image_tag 'integrations/odoo.png',:class => 'img-responsive', :alt => 'odoo', width: "102", height: "71" %>
           </div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/aftership.png',:class => 'img-responsive', :alt => 'aftership' %>
+            <%= image_tag 'integrations/aftership.png',:class => 'img-responsive', :alt => 'aftership', width: "102", height: "71" %>
           </div>
         </div>
       </div>
@@ -142,7 +142,7 @@
       <div class="col-md-2">
         <div class="section">
           <div class="pic">
-            <%= image_tag 'integrations/square.png',:class => 'img-responsive', :alt => 'square' %>
+            <%= image_tag 'integrations/square.png',:class => 'img-responsive', :alt => 'square', width: "102", height: "71" %>
           </div>
         </div>
       </div>
