--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,8 +11,9 @@
          <%= link_to "ERP & CRM", open_workspace(current_user), class: 'button' %>
          <%= link_to "Sign out", destroy_user_session_path, class: 'demo' %>
         <% else %>
-          <a id='sing_up_button' href='#sing_up', class='button'>Sing up</a>
-          <a id='sing_in_button' href='#sing_in' class="demo">Sign in</a>
+          <a href='#sing_up', class='button sing_up_top'>Data Integrator</a>
+          <a href='#sing_up', class='button sing_up_top'>ERP & CRM</a>
+          <a id='sing_in_top' href='#sing_in' class="demo">Sign in</a>
         <% end %>
       </div>
       <div class="screenshot animated fadeInUp">
@@ -33,12 +34,39 @@
 <br><br><br>
 <% unless current_user.present? %>
   <% resource ||= User.new %>
-  <div id="sing_up_form">
+
+  <div id="sing_in_form" style='display:none;'>
     <div class="container text-center">
       <div class="row">
         <div class="col-md-12">
           <div class="form-wrapper" >
-            <h4>Ready to start? Create your free account now</h4>
+            <h4>Enter in your account now or <a id='sing_up_button' href='#sing_up' class="demo">sign up</a></h4>
+            <% flash.each do |key, message| %>
+              <div class="notice"><%= message %></div>
+            <% end %>
+            <%= form_for resource, as: :user, url: session_path(:user), remote: true, html:  { role: 'form', class: 'form-inline'} do |f| %>
+              <div class="form-group">
+                <%= f.email_field :email, class: 'form-control', :placeholder => 'Email' %>
+              </div>
+              <div class="form-group">
+                <%= f.password_field :password, class: 'form-control', :placeholder => 'Password' %>
+              </div>
+
+              <%= f.submit 'Submit',:class => 'button button-small' %>
+              <a name='sing_in'></a>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="sing_up_form">
+    <div class="container text-center" >
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-wrapper" >
+            <h4>Ready to start? Create your free account now or <a id='sing_in_button' href='#sing_in' class="demo">sign in</a></h4>
             <% flash.each do |key, message| %>
               <div class="notice"><%= message %></div>
             <% end %>
@@ -54,8 +82,9 @@
                 <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Password Confirmation' %>
               </div>
 
-              <%= f.submit 'Sign Up',:class => 'button button-small' %>
+              <%= f.submit 'Submit',:class => 'button button-small' %>
               <a name='sing_up'></a>
+              
             <% end %>
           </div>
         </div>
@@ -63,31 +92,6 @@
     </div>
   </div>
 
-  <div id="sing_in_form" style='display:none'>
-    <div class="container text-center">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="form-wrapper" >
-            <h4>Enter in your account now</h4>
-            <% flash.each do |key, message| %>
-              <div class="notice"><%= message %></div>
-            <% end %>
-            <%= form_for resource, as: :user, url: session_path(:user), remote: true, html:  { role: 'form', class: 'form-inline'} do |f| %>
-              <div class="form-group">
-                <%= f.email_field :email, class: 'form-control', :placeholder => 'Email' %>
-              </div>
-              <div class="form-group">
-                <%= f.password_field :password, class: 'form-control', :placeholder => 'Password' %>
-              </div>
-
-              <%= f.submit 'Sign In',:class => 'button button-small' %>
-              <a name='sing_in'></a>
-            <% end %>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
 <% end %>
 </div>
@@ -95,25 +99,26 @@
 <script>
     $(function () {
       
-        $("#sing_in_button").click(function (e) {
-           $("#sing_in_button").addClass('button');
-           $("#sing_up_button").addClass('demo').removeClass( 'button' )
-           
-           $("#sing_up_form").css({"display":'none'});
-           $("#sing_in_form").css({"display":"block"});
-           //$(this).css({"display":"block"});
-           
-        });
-        
-        $("#sing_up_button").click(function (e) {
-           $("#sing_up_button").addClass('button');
-           $("#sing_in_button").addClass('demo').removeClass( 'button' )
-           
-           $("#sing_in_form").css({"display":'none'});
-           $("#sing_up_form").css({"display":"block"});
-        });
+      $("#sing_in_button").click(function (e) {
+         $("#sing_in_form").show();
+         $("#sing_up_form").hide();
+      });
       
+      $("#sing_in_top").click(function (e) {
+         $("#sing_in_form").show();
+         $("#sing_up_form").hide();
+      });
       
+      $("#sing_up_button").click(function (e) {
+         $("#sing_in_form").hide();
+         $("#sing_up_form").show();
+      });
+      
+      $(".sing_up_top").click(function (e) {
+         $("#sing_in_form").hide();
+         $("#sing_up_form").show();
+      });
+
         // triggers the off-canvas panel
         $(".sidebar-toggle").click(function (e) {
             e.stopPropagation();
