fix working 'management'

--- a/app/views/shared/_prices.html.erb
+++ b/app/views/shared/_prices.html.erb
@@ -79,7 +79,7 @@
             </div>
             <div class="spec">
               <span class="variable">Include</span>
-              SaaS mannagment
+              SaaS management
             </div>
             <div class="spec">
               <span class="variable">$0.05</span>
