add contact us in the bottom

--- a/app/views/shared/_registration.html.erb
+++ b/app/views/shared/_registration.html.erb
@@ -60,6 +60,24 @@
     </div>
   </div>
 
+<% else %>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-wrapper" >
+            <div class="wrapper clearfix">
+              <div class="col-md-9">
+                <h4>Take time and tell us about your experience with Cenit SaaS</h4>
+              </div>
+              <a data-toggle="modal" class="button button-small" href="#contact_us" data-backdrop="false">
+                <span>Contact Us</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 <% end %>
 </div>
